@@ -1,3 +1,6 @@
+rev 593 (2021-05-17) (krueshan)
+- include dismissible banner at the top of the calculator to inform users about important changes/details
+
 rev 592 (2021-04-26) (krueshan)
 - users can now select a base year/reference year for the country table
 
